feat(combat): implement mob skill runtime, raycasting, dynamic targeters, and test suites